--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required (VERSION 2.8)
+cmake_minimum_required (VERSION 3.1)
 
 project(client)
 
@@ -8,6 +8,6 @@ include_directories(/usr/include/hiredis)
 
 find_library(HIREDIS_LIBRARY hiredis)
 
-add_executable(client clientmain.cpp menu.cpp sign.cpp)
+add_executable(client clientmain.cpp menu.cpp sign.cpp friend.cpp)
 
 target_link_libraries(client ${HIREDIS_LIBRARY})
