--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -8,6 +8,6 @@ include_directories(/usr/include/hiredis)
 
 find_library(HIREDIS_LIBRARY hiredis)
 
-add_executable(client clientmain.cpp menu.cpp sign.cpp friend.cpp group.cpp)
+add_executable(client clientmain.cpp menu.cpp sign.cpp friend.cpp group.cpp file.cpp)
 
 target_link_libraries(client ${HIREDIS_LIBRARY})
