--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -8,6 +8,6 @@ include_directories(/usr/include/hiredis)
 
 find_library(HIREDIS_LIBRARY hiredis)
 
-add_executable(server servermain.cpp file.cpp user.cpp sign.cpp friend.cpp group.cpp)
+add_executable(server servermain.cpp file.cpp user.cpp sign.cpp friend.cpp group.cpp transfer.cpp)
 
 target_link_libraries(server ${HIREDIS_LIBRARY})
